Admin Dashbord Added

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTA9bF-aE413zicEaWZaip6nSerVw1zinw1-g&s" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <title>Songar's GYM</title>
   </head>
   <body>
     <div id="root"></div>
